# compound-extraction

./: .gitignore  start_all.sh  start_local.sh
.github/workflows/: deploy-frontend.yml  keep-warm.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: convert.py  health.py  jobs.py  render.py
backend/app/core/: config.py  dependencies.py
backend/app/schemas/: enums.py  extraction_types.py  pipeline_types.py  smiles_validation_types.py
backend/app/services/: csv_export.py  depiction.py  extraction_service.py  format_dispatch_service.py  job_store.py  molscribe_service.py  pipeline_service.py  smiles_validation.py  zip_export.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  convert.ts  jobs.ts  render.ts
frontend/src/components/: CompoundCard.tsx  Dropzone.tsx  KetcherEditor.tsx
frontend/src/pages/: ConvertPage.tsx
