[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compound-extraction-v3"
version = "3.0.0"
description = "Upload PNG/PDF/PPTX, detect chemical structures, recognize SMILES (MolScribe), standardize (RDKit), export CSV."
requires-python = ">=3.9,<3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "MolScribe==1.1.1",
    "torch==1.13.1",
    "rdkit==2022.9.5",
    "opencv-python==4.9.0.80",
    "pymupdf==1.24.10",
    "Pillow==10.4.0",
    "numpy<2",
    "python-pptx==1.0.2",
]

# The FastAPI app lives under app/ (run as `uvicorn app.main:app`), so the
# importable package is `app`.
[tool.setuptools]
packages = ["app"]
